--- a/release_notes.html
+++ b/release_notes.html
@@ -22,5 +22,7 @@
             href="https://issues.apache.org/jira/browse/IGNITE-11767">[#IGNITE-11767]</a></li>
     <li>.NET: Fix for native persistence, now it works with custom affinity function <a
             href="https://issues.apache.org/jira/browse/IGNITE-10451">[#IGNITE-10451]</a></li>
+    <li>Fixed case when an outdated node with already destroyed cache causes cluster hang <a
+            href="https://issues.apache.org/jira/browse/IGNITE-9562">[#IGNITE-9562]</a></li>
 </ul>
 </body>
