IGNITE-12061 Release notes for Ignite 2.7.6.

--- a/release_notes.html
+++ b/release_notes.html
@@ -24,5 +24,8 @@
             href="https://issues.apache.org/jira/browse/IGNITE-10451">[#IGNITE-10451]</a></li>
     <li>Fixed case when an outdated node with already destroyed cache causes cluster hang <a
             href="https://issues.apache.org/jira/browse/IGNITE-9562">[#IGNITE-9562]</a></li>
+    <li>Fixed the bug with the inability to change the inline_size of an existing index after a drop and further
+        recreation with a different one <a
+                href="https://issues.apache.org/jira/browse/IGNITE-12061">[#IGNITE-12061]</a></li>
 </ul>
 </body>
